--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jotai": "^2.11.1",
     "motion": "^12.0.3",
     "next": "15.1.6",
+    "node-fetch": "^3.3.2",
     "playwright": "^1.50.0",
     "playwright-core": "^1.50.0",
     "posthog-js": "^1.209.3",
